[tool.poetry]
name = "taas"
version = "0.1.0"
description = "Tiling as a service."
authors = ["Jack Grahl <jack.grahl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
honeycomb-beeline = "^2.16.2"
pretty-poly = "^0.2.0"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
